--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,18 @@ dependencies:
   google_fonts: ^6.3.3
   path_provider: ^2.1.5
   shared_preferences: ^2.5.4
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
+  cloud_firestore: ^6.1.1
+  image_picker: ^1.2.1
+  firebase_storage: ^13.0.5
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  geolocator: ^14.0.2
+  http: ^1.6.0
+  geocoding: ^4.0.0
+  google_generative_ai: ^0.4.7
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
